--- a/Recurly_API_Test/App.config
+++ b/Recurly_API_Test/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="recurlyApiKey" value="a6bf6705722a48768e9e6286ea82f2c6"/>
-    <add key="recurlySubdomain" value="jdrill"/>
+    <add key="recurlyApiKey" value="1234567890"/>
+    <add key="recurlySubdomain" value="company"/>
   </appSettings>
 </configuration>
